# rust-softrender

./: .gitignore  Cargo.toml  README.md
examples/: basic.rs  suzanne.rs
full_example/: Cargo.toml  README.md
full_example/src/: color.rs  lib.rs  light.rs  main.rs  mesh.rs  shaders.rs  texture.rs  uniforms.rs
realtime_example/: Cargo.toml  README.md  build.rs
realtime_example/src/: main.rs
src/: behavior.rs  blend.rs  clip.rs  error.rs  framebuffer.rs  geometry.rs  image_compat.rs  interpolate.rs  lib.rs  macros.rs  mesh.rs  parallel.rs  pipeline.rs  pixel.rs  primitive.rs  stencil.rs  texture.rs  tuples.rs  uniform.rs  utils.rs
src/color/: blend.rs  helper.rs  mod.rs  predefined.rs
src/framebuffer/: accessor.rs  coordinate.rs  dimension.rs  mod.rs  nullbuffer.rs  pixel.rs  renderbuffer.rs  texturebuffer.rs  types.rs
src/framebuffer/attachments/: color.rs  depth.rs  mod.rs  predefined.rs  stencil.rs
src/framebuffer/attachments/color/: blend.rs  mod.rs  predefined.rs
src/framebuffer/renderbuffer/: iterator.rs  mod.rs
src/geometry/: clip.rs  clipvertex.rs  coordinate.rs  dimension.rs  line.rs  mod.rs  screenvertex.rs  winding.rs
src/image/: color.rs  mod.rs  pixelbuffer.rs
src/mesh/: mod.rs  vertex.rs
src/numeric/: interpolate.rs  mod.rs  utils.rs
src/pipeline/: mod.rs  storage.rs  types.rs
src/pipeline/stages/: fragment.rs  geometry.rs  mod.rs  vertex.rs
src/pipeline/stages/rasterization/: line.rs  mod.rs  point.rs  triangle.rs
src/pixels/: accessor.rs  iterator.rs  mod.rs  partial.rs  pixelbuffer.rs
src/render/: blend.rs  clip.rs  framebuffer.rs  geometry.rs  mod.rs  pipeline.rs  pixel.rs  primitive.rs  projection.rs  screen.rs  shading.rs  uniform.rs
src/renderer/: mod.rs
src/scene/: mesh.rs  mod.rs
tests/: declare_texture_buffer.rs
