[package]
authors = ["Aaron Trent <novacrazy@gmail.com>"]
description = "Software Renderer in Rust"
documentation = "https://docs.rs/softrender/"
include = ["src/**/*", "Cargo.toml"]
keywords = ["render", "renderer", "rasterizer", "3d"]
license = "MIT"
name = "softrender"
readme = "README.md"
repository = "https://github.com/novacrazy/rust-softrender"
version = "0.1.0"

[dependencies]
nalgebra = "0.12"
rayon = "0.7.0"

[dependencies.image]
optional = true
version = "0.13"

[dev-dependencies]
image = "0.13.0"
tobj = "0.1.3"

[[example]]
name = "suzanne"
required-features = ["image_compat"]

[features]
default = []
image_compat = ["image"]
