[package]
authors = ["Aaron Trent <novacrazy@gmail.com>"]
description = "Software Renderer in Rust"
documentation = "https://docs.rs/softrender/"
include = ["src/**/*", "Cargo.toml"]
keywords = ["render", "renderer", "rasterizer", "3d"]
license = "MIT"
name = "softrender"
readme = "README.md"
repository = "https://github.com/novacrazy/rust-softrender"
version = "0.1.0"

[dependencies]
alga = "0.5.1"
nalgebra = "0.12"
num-traits = "0.1.39"
num_cpus = "1.6.2"
parking_lot = "0.4.4"
scoped_threadpool = "0.1.7"
smallvec = "0.4.0"
trace-error = "0.1.5"

[dependencies.image]
optional = true
version = "0.14"

[dev-dependencies]
image = "0.14.0"
tobj = "0.1.3"

[[example]]
name = "suzanne"
required-features = ["image_compat"]

[features]
default = []
image_compat = ["image"]
