[package]
authors = ["Aaron Trent <novacrazy@gmail.com>"]
description = "Software Renderer in Rust"
documentation = "https://docs.rs/softrender/"
include = ["src/**/*", "Cargo.toml"]
keywords = ["render", "renderer", "rasterizer", "3d"]
license = "MIT"
name = "softrender"
readme = "README.md"
repository = "https://github.com/novacrazy/rust-softrender"
version = "0.1.0"

[dependencies]
numeric-array = { path = "../numeric-array" }
nalgebra = "0.14.1"
smallvec = "0.6.0"

[dependencies.failure]
version = "0.1.1"
features = ["default", "backtrace"]
