[package]
authors = ["Aaron Trent <novacrazy@gmail.com>"]
name = "softrender_full_example"
version = "0.1.0"

[dependencies]
image = "0.13.0"
nalgebra = "0.12.1"
rayon = "0.7.0"
tobj = "0.1.3"

[dependencies.softrender]
features = ["image_compat"]
path = "../"

[lib]
name = "full_example"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"